imt/src/less/picker.less
.picker {
  margin: 0;
  padding: 0;

  .notice{ padding: 1em; }

  .icon {
    display:inline-block;
    margin-right:0.5em;
    height:20px; 
    width:20px; 
    border: black 1px solid;
  }

  img.loading { float: right; }

  table.dataTable {
    border: 1px #eee solid;

    tbody {
      &, a { color: black; }
    }
    thead th {
      div.DataTables_sort_wrapper {
        position: relative;
        padding-right: 20px;
      }

      div.DataTables_sort_wrapper span {
        position: absolute;
        top: 50%;
        margin-top: -8px;
        right: 0;
      }
    }
  }

  //Position the clearResults btn next to the control panel toggle
  //Note, this is only possible because the picker panel is not absolutly 
  //positioned itself. It is the accordian which is. @see controlpanel.less
  button.clearResults {
    position: absolute;
    top: 6px;
    right: 54px;
  }

  .records {
    padding: 0;
    .ui-corner-tr, .ui-corner-tl, .ui-corner-br, .ui-corner-bl { border-radius: 0;}
  }
}

